# Aphelion

./: CMakeLists.txt  README.md  package.xml
aphelion/: CMakeLists.txt  README.md  package.xml
aphelion/aphelion/: .control.py.swp  control.py
aphelion/config/: marker_poses.yaml  real_marker_poses.yaml  sim_bridge.yaml
aphelion/launch/: gazebo_sim_launch.py  kalman_loc_launch.py  multi_puzzlebot_sim_launch.py  puzzlebot_formation_sim_launch.py  sexo_launch.py  slam_sim_launch.py
aphelion/maps/: map_params.yaml  mapa.pgm  mapa_sexo.yaml
aphelion/meshes/: MCR2_caster_wheel_mod.stl  MCR2_puzzlebot_base_mod.stl  MCR2_puzzlebot_jetson_base_mod.stl  MCR2_puzzlebot_jetson_lidar_base_mod.stl  MCR2_wheel_mod.stl
aphelion/models/Aruco10/: model.config  model.sdf
aphelion/models/Aruco2/meshes/: aruco4x4_2.dae
aphelion/models/Aruco3/: model.config  model.sdf
aphelion/models/P80_Pallet/: model.config  model.sdf
aphelion/models/P80_Pallet/meshes/: pallet.dae
aphelion/models/puzzlebot_lidar/: model.sdf
aphelion/src/: asmc.cpp  asmc_old.cpp  formation_asmc.cpp  guild_navigator.cpp  guild_navigator2.cpp  master_control.cpp  odom.cpp  odom_feik.cpp  pallet_align.cpp  restamper.cpp  simple_kinematics.cpp
aphelion/urdf/: multi_puzzlebot.urdf
aphelion/worlds/: crepa.sdf  posole.sdf  tacodcostilla.sdf
aphelion_msgs/: CMakeLists.txt  package.xml
aphelion_msgs/msg/: NavState.msg  PoseCommand.msg
config/: adjusted_marker_poses.yaml  marker_poses.yaml  marker_poses_old.yaml  sim_bridge.yaml  sim_bridge_gazebo.yaml  sim_bridge_kalman.yaml  slam_params.yaml
launch/: gazebo_sim_launch.py  multi_puzzlebot_sim_launch.py  puzzlebot_sim_launch.py  sexo_launch.py  slam_launch.py
maps/: mapa.yml  mapa_bien_real.yaml  mapa_bien_real_mod.pgm  mapa_sexo2.pgm
models/Aruco10/meshes/: aruco4x4_10.dae
models/Aruco11/: model.config  model.sdf
models/Aruco11/meshes/: aruco4x4_11.dae
models/Aruco12/: model.config  model.sdf
models/Aruco12/meshes/: aruco4x4_12.dae
models/Aruco13/: model.config  model.sdf
models/Aruco13/meshes/: aruco4x4_13.dae
models/Aruco2/: model.config  model.sdf
models/Aruco3/meshes/: aruco4x4_3.dae
models/Aruco8/: model.config  model.sdf
models/Aruco8/meshes/: aruco4x4_8.dae
models/puzzlebot/: model.sdf
src/: asmc.cpp  formation_asmc.cpp  guild_navigator.cpp  guild_navigator2.cpp  master_control.cpp  odom.cpp  restamper.cpp  simple_kinematics.cpp
urdf/: multi_puzzlebot.urdf  puzzlebot.urdf  puzzlebot_real.urdf
worlds/: posole.sdf
